Try to fix image issue on safari

--- a/src/views/TaskViewBoard/Read/Card/taskCard.css
+++ b/src/views/TaskViewBoard/Read/Card/taskCard.css
@@ -186,7 +186,7 @@ body {
   align-items: center;
 }
 
-.swiper-slide picture {
+.swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
